--- a/ClassAssistantBot/ClassAssistantBot.csproj
+++ b/ClassAssistantBot/ClassAssistantBot.csproj
@@ -14,6 +14,7 @@
     <None Remove="Microsoft.EntityFrameworkCore.Abstractions" />
     <None Remove="Npgsql.EntityFrameworkCore.PostgreSQL" />
     <None Remove="Microsoft.EntityFrameworkCore.Design" />
+    <None Remove="Migrations\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Telegram.BotAPI" Version="6.0.0" />
@@ -25,5 +26,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
