--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - '25000:25000'
     environment:
-      PostgreSqlConnectionString: "Host=${DB_HOST};Port=5433;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Database=${POSTGRES_DB};"
+      PostgreSqlConnectionString: "Host=${DB_HOST};Port=5432;Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD};Database=${POSTGRES_DB};"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:25000/ || exit 1"]
       start_period: 60s
@@ -24,8 +24,8 @@ services:
     #  - db
 
   #db:
-    image: postgres:12.4-alpine
-    restart: always
+    #image: postgres:12.4-alpine
+    #restart: always
     #ports:
     #  - 5432:5432
     #volumes:
